static/progressbar.css
:root {
    /* 进度条背景色(未达到部分)*/
    --container-color: rgb(216, 228, 229, 0.7);
    /* 进度条前景色(已达到部分)*/
    --progress-color: rgba(255, 123, 0);

    /* 进度条背景色（已达到部分-黑夜模式*/
    --container-dark-color: rgba(216, 228, 229,0.5);
    /* 进度条前景色（未达到部分-黑夜模式  */
    --progress-dark: rgb(0, 128, 207);

    /* 进度百分比文字-黑夜模式 */
    --text-dark: rgb(201, 209, 217);
    --bar-radius: 5px;
    /*
    已完成          未达到
    暗橙175, 72, 27 底色176, 176, 176
    淡绿22,170,157 底色197, 229, 234
    亮橙255, 123, 0 底色233, 215, 199
    洋红 203, 64, 108 底色216, 228, 229
    蓝 0, 128, 207 底色
    */
}

#refresh {
    background-image: url("./icon.png");
}

.infos button {
    border: gray 2px solid;
    /*自动模式按钮边框*/
    font-weight: 300;
    background-size: auto 1.5em;
    background-repeat: no-repeat;
    background-position: center;
    width: 3em;
    height: 1.3em;
    vertical-align: middle;
    border-radius: 0.3em;
    box-sizing: border-box;
    text-align: center;
    line-height: 1em;
    text-decoration: none;
    /* display: inline-block; */
    font-size: 16px;
    background-color: #f0f0f022;
}

.app button {
    border-width: 2px;
    /*自动模式按钮边框*/
    font-weight: 300;
    background-size: auto 1.5em;
    background-repeat: no-repeat;
    background-position: center;
    width: 3em;
    height: 1.5em;
    border-radius: 0.3em;
    box-sizing: border-box;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    background-color: #f0f0f022;
}


/* 进度条主体 */
#container {
    width: 100%;
    /*进度条宽度*/
    height: 10px;
    /*进度条高度*/
    border-radius: var(--bar-radius);
    /*进度条圆角*/
    align-self: center;
    /* float: right; */
}

.container {
    /*进度条背景色（未达到的部分）*/
    background: var(--container-color);
}

.infos > * {
    margin-left: 3px;
}

#progress {
    width: 0%;
    /*初始值，刷新后由js控制*/
    height: inherit;
    /*请勿修改*/
    border-radius: var(--bar-radius) 0 0 var(--bar-radius);
    /*进度条已加载部分颜色*/
    transition-property: width;
    transition-duration: 200ms;
}

.progress {
    background: var(--progress-color);
}

/* 黑夜模式下进度条已完成颜色 */
.progress_dark {
    background: var(--progress-dark);
}

/* 黑夜模式下进度条未完成颜色 */
.container_dark {
    background: var(--container-dark-color);
}

#percentage {
    text-align: center;
    width: 50px;
    /* flex: right; */
}

/* 黑夜模式下百分比文字 */
.text_dark {
    color: var(--text-dark);
}

#errorInfo {
    color: red;
}

#infoInfo {
    color: cornflowerblue;
}

/* 手动模式按钮样式 */
.manualMode {
    border-color: darkred;
    border-style: dashed;
    background-color: #d4508c35;/*红212 80 140*/
}
/* 自动模式按钮样式 */
.autoMode{
    border-color: cornflowerblue;
    border-style: solid;
    background-color: #28aadb35;/*蓝40 170 219*/
}

/* 时间模式按钮样式 */
.timeMode {
    border-color: darkgreen;
    border-style: dotted;
    background-color: #f1e34235;/*黄241 227 42*/
}

.app {
    display: flex;
    justify-content: flex-start;

}

